Fix background image on Safari

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -12,16 +12,23 @@
     }
 }
 
-body {
+body:after {
+    content:"";
+    position:fixed; /* stretch a fixed position to the whole screen */
+    top:0;
+    height:100vh; /* fix for mobile browser address bar appearing disappearing */
+    left:0;
+    right:0;
+    z-index:-1; /* needed to keep in the background */
     background-attachment: fixed;
 }
 
-body.light {
+body.light:after {
     background-color: #00679e;
     background-image: linear-gradient(20deg, #57b4dc 0%, #00679e 100%);
 }
 
-body.dark {
+body.dark:after {
     background-color: #0F172A;
     background-image: linear-gradient(20deg, #003359 0%, #0F172A 100%);
 }
